--- a/app/src/main/res/layout/item_coin_view.xml
+++ b/app/src/main/res/layout/item_coin_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_weight="wrap_content">
+    >
 
     <ImageView
         android:id="@+id/coin_image"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="20dp"
+        android:textSize="20sp"
         tools:text="$11,511.80"
         android:textColor="@color/lightBlack"
         android:layout_margin="20dp"
