--- a/app/src/main/res/layout/activity_edit_alert.xml
+++ b/app/src/main/res/layout/activity_edit_alert.xml
@@ -7,5 +7,85 @@
     tools:context="dev.yamin.cryptcurrencyacademy.alerts.EditAlertActivity">
 
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/alert_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        >
+
+
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:gravity="center_horizontal"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            tools:text="BITCOIN (BTC)" />
+
+
+    </android.support.design.widget.AppBarLayout>
+<Space
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
+
+
+
+    <TextView
+        android:id="@+id/edit_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="normal"
+        android:textColor="#8b000000"
+        tools:text=" $11,511.80"
+        app:layout_constraintEnd_toStartOf="parent"
+
+
+        />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        android:layout_marginRight="130dp"
+        >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="bold"
+        android:textColor="#d0021b"
+        android:gravity="center_horizontal"
+        tools:text="-0.07%"
+
+
+
+        />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#4a4a4a"
+            android:gravity="center_horizontal"
+            tools:text="1h   "
+            android:layout_marginLeft="10dp"
+            />
+
+</LinearLayout>
+
+
+
+
 
 </android.support.constraint.ConstraintLayout>
