added item view

--- a/app/src/main/res/layout/item_coin_view.xml
+++ b/app/src/main/res/layout/item_coin_view.xml
@@ -11,7 +11,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_margin="20dp"
-        tools:src="@drawable/ic_bitcoin"
+        android:src="@drawable/ic_bitcoin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        tools:text="1h"
+        android:text="1h"
         app:layout_constraintTop_toBottomOf="@+id/coin_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/coin_name"
