added item view

--- a/app/src/main/res/layout/item_coin_view.xml
+++ b/app/src/main/res/layout/item_coin_view.xml
@@ -68,6 +68,7 @@
         />
 
     <ImageView
+        android:id="@+id/coin_arrow"
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_margin="10dp"
