--- a/app/src/main/res/layout/activity_new_alert.xml
+++ b/app/src/main/res/layout/activity_new_alert.xml
@@ -11,10 +11,10 @@
         android:name="dev.yamin.cryptcurrencyacademy.alerts.NewAlertFragmentDialog"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="dev.yamin.cryptcurrencyacademy.alerts.NewAlertFragmentDialog"
+        tools:context="dev.yamin.cryptcurrencyacademy.alerts.NewAlertActivity"
         tools:listitem="@layout/fragment_new_alert_item" />
 
 </android.support.constraint.ConstraintLayout>
