--- a/app/src/main/res/layout/item_coin_view.xml
+++ b/app/src/main/res/layout/item_coin_view.xml
@@ -10,7 +10,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_margin="20dp"
-        tools:src="@drawable/ic_bitcoin"
+        tools:src="@drawable/ic_etherium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
