--- a/app/src/main/res/layout/item_coin_view.xml
+++ b/app/src/main/res/layout/item_coin_view.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         tools:text="Bitcoin(BTC)"
         android:textColor="@color/lightBlack"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:layout_margin="20dp"
         app:layout_constraintStart_toEndOf="@+id/coin_image"
@@ -49,7 +49,7 @@
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginEnd="10dp"
         android:text="1h"
         app:layout_constraintTop_toBottomOf="@+id/coin_name"
         app:layout_constraintBottom_toBottomOf="parent"
