--- a/app/src/main/res/layout/fragment_alerts.xml
+++ b/app/src/main/res/layout/fragment_alerts.xml
@@ -4,13 +4,12 @@
     android:layout_height="match_parent"
     tools:context="dev.yamin.cryptcurrencyacademy.alerts.AlertsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
+        android:layout_height="match_parent">
 
-        />
-
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
