--- a/app/src/main/res/layout/item_alert_view.xml
+++ b/app/src/main/res/layout/item_alert_view.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/coin_image"
@@ -36,7 +35,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="20sp"
-        tools:text="$11,511.80"
+        tools:text="0.01201BTC"
         android:textColor="@color/lightBlack"
         android:layout_margin="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,37 +44,53 @@
 
         />
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:text="24h"
+
+    <ImageView
+        android:id="@+id/arrow_up"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/ic_arrow_up"
         app:layout_constraintTop_toBottomOf="@+id/coin_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/coin_name"
         />
 
     <TextView
-        android:id="@+id/percent"
+        android:id="@+id/max_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        tools:text="-0.07%"
-        app:layout_constraintTop_toBottomOf="@+id/coin_name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/time"
+        tools:text="0.01254BTC"
+        android:textSize="15sp"
+        android:textColor="#9ccf49"
+        android:textStyle="bold"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@id/coin_name"
+        app:layout_constraintStart_toEndOf="@id/arrow_up"
         />
+
 
     <ImageView
-        android:id="@+id/coin_arrow"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_margin="10dp"
+        android:id="@+id/arrow_down"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/ic_arrow_down"
-        app:layout_constraintTop_toBottomOf="@+id/coin_name"
+        app:layout_constraintTop_toBottomOf="@+id/coin_price"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/percent"
+        app:layout_constraintStart_toStartOf="@+id/coin_price"
         />
 
+    <TextView
+        android:id="@+id/min_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="0.00014BTC"
+        android:textSize="15sp"
+        android:textColor="#d0021b"
+        android:textStyle="bold"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@id/coin_name"
+        app:layout_constraintStart_toEndOf="@id/arrow_down"
+        />
 </android.support.constraint.ConstraintLayout>
