--- a/app/src/main/res/layout/item_alert_view.xml
+++ b/app/src/main/res/layout/item_alert_view.xml
@@ -90,7 +90,7 @@
         android:textColor="#d0021b"
         android:textStyle="bold"
         android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/coin_name"
+        app:layout_constraintTop_toBottomOf="@id/coin_price"
         app:layout_constraintStart_toEndOf="@id/arrow_down"
         />
 </android.support.constraint.ConstraintLayout>
