--- a/app/src/main/res/layout/activity_edit_alert.xml
+++ b/app/src/main/res/layout/activity_edit_alert.xml
@@ -5,50 +5,155 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/tv_edit_price"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="136dp"
+        android:fontFamily="sans-serif"
+        android:textColor="#8b000000"
+        android:textSize="20sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.505"
+        tools:text=" $11,511.80" />
 
-        <ImageView
-            android:id="@+id/coin_image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="20dp"
-            android:layout_marginStart="144dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.925"
-            tools:src="@drawable/" />
 
-        <TextView
-            android:id="@+id/percent"
-            android:layout_width="51dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="104dp"
-            android:textColor="#d0021b"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="-0.07%" />
-
-    </RelativeLayout>
+    <ImageView
+        android:id="@+id/row_image"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_margin="20dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_arrow_down"
+        app:layout_constraintStart_toStartOf="@id/tv_edit_price"
+        app:layout_constraintTop_toBottomOf="@id/tv_edit_price" />
 
     <TextView
-
-        android:layout_width="40dp"
+        android:id="@+id/percent_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="28dp"
-        android:fontFamily="sans-serif"
+        android:layout_margin="20dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_horizontal"
+        android:textColor="#d0021b"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/row_image"
+        app:layout_constraintTop_toBottomOf="@id/tv_edit_price"
+        tools:text="-0.07%" />
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        android:text="1h"
         android:textColor="#4a4a4a"
         android:textSize="18sp"
         android:textStyle="normal"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="214dp"
-        tools:text="1h"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintStart_toEndOf="@id/percent_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_edit_price" />
 
+<ToggleButton
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintEnd_toStartOf="@id/tv_above_price"
+    app:layout_constraintTop_toBottomOf="@id/row_image"
+    />
+
+    <TextView
+        android:id="@+id/tv_above_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:fontFamily="sans-serif-medium"
+        android:textStyle="normal"
+        android:textColor="#7e8083"
+        android:letterSpacing="0.04"
+        android:paddingTop="21dp"
+        android:gravity="center_horizontal"
+        tools:text="Above Price : 	"
+        app:layout_constraintStart_toStartOf="@id/tv_edit_price"
+        app:layout_constraintTop_toBottomOf="@id/row_image"
+        />
+
+    <TextView
+        android:id="@+id/above_price_dollar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-medium"
+        android:textStyle="normal"
+        android:textColor="#7e8083"
+        android:letterSpacing="0.04"
+        android:gravity="center_horizontal"
+        tools:text="$14,000"
+        app:layout_constraintStart_toEndOf="@id/tv_above_price"
+        app:layout_constraintTop_toBottomOf="@id/time"
+        />
+
+    <SeekBar
+        android:id="@+id/seek_bar_above"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="37dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_above_price"
+        app:layout_constraintStart_toStartOf="@id/tv_above_price"
+        />
+
+    <Button
+        android:id="@+id/above_price_minus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/above_price_dollar"
+        app:layout_constraintStart_toStartOf="@id/above_price_dollar"
+        android:text="-"
+        />
+
+    <Button
+        android:id="@+id/above_price_plus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/above_price_minus"
+        app:layout_constraintTop_toBottomOf="@id/above_price_dollar"
+        android:text="+"
+        />
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:fontFamily="sans-serif"
+        android:textStyle="bold"
+        android:textColor="#ffffff"
+        android:letterSpacing="0.04"
+        android:gravity="center_horizontal"
+        android:background="#2196f3"
+        tools:text="SAVE"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:fontFamily="sans-serif-medium"
+        android:textStyle="normal"
+        android:textColor="#9b9b9b"
+        android:letterSpacing="0.04"
+        android:gravity="center_horizontal"
+        tools:text="DISCARD"
+       app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        />
 
 </android.support.constraint.ConstraintLayout>
