--- a/app/src/main/res/layout/activity_edit_alert.xml
+++ b/app/src/main/res/layout/activity_edit_alert.xml
@@ -1,159 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_edit_price"
-        android:layout_width="360dp"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/edit_app_bar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:fontFamily="sans-serif"
-        android:textColor="#8b000000"
-        android:textSize="20sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.505"
-        tools:text=" $11,511.80" />
+        android:theme="@style/AppTheme.AppBarOverlay">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/edit_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize" />
 
-    <ImageView
-        android:id="@+id/row_image"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_margin="20dp"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/ic_arrow_down"
-        app:layout_constraintStart_toStartOf="@id/tv_edit_price"
-        app:layout_constraintTop_toBottomOf="@id/tv_edit_price" />
+    </android.support.design.widget.AppBarLayout>
 
-    <TextView
-        android:id="@+id/percent_name"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:textColor="#d0021b"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/row_image"
-        app:layout_constraintTop_toBottomOf="@id/tv_edit_price"
-        tools:text="-0.07%" />
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/edit_app_bar">
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:text="1h"
-        android:textColor="#4a4a4a"
-        android:textSize="18sp"
-        android:textStyle="normal"
-        app:layout_constraintStart_toEndOf="@id/percent_name"
-        app:layout_constraintTop_toBottomOf="@id/tv_edit_price" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-<ToggleButton
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintEnd_toStartOf="@id/tv_above_price"
-    app:layout_constraintTop_toBottomOf="@id/row_image"
-    />
+            <TextView
+                android:id="@+id/tv_edit_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:textColor="#8b000000"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text=" $11,511.80" />
 
-    <TextView
-        android:id="@+id/tv_above_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="normal"
-        android:textColor="#7e8083"
-        android:letterSpacing="0.04"
-        android:paddingTop="21dp"
-        android:gravity="center_horizontal"
-        tools:text="Above Price : 	"
-        app:layout_constraintStart_toStartOf="@id/tv_edit_price"
-        app:layout_constraintTop_toBottomOf="@id/row_image"
-        />
+            <TextView
+                android:id="@+id/edit_percent_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="13dp"
+                android:textColor="#d0021b"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_edit_price"
+                tools:text="-0.07%" />
 
-    <TextView
-        android:id="@+id/above_price_dollar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="normal"
-        android:textColor="#7e8083"
-        android:letterSpacing="0.04"
-        android:gravity="center_horizontal"
-        tools:text="$14,000"
-        app:layout_constraintStart_toEndOf="@id/tv_above_price"
-        app:layout_constraintTop_toBottomOf="@id/time"
-        />
-
-    <SeekBar
-        android:id="@+id/seek_bar_above"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
-        android:layout_marginTop="37dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_above_price"
-        app:layout_constraintStart_toStartOf="@id/tv_above_price"
-        />
-
-    <Button
-        android:id="@+id/above_price_minus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/above_price_dollar"
-        app:layout_constraintStart_toStartOf="@id/above_price_dollar"
-        android:text="-"
-        />
-
-    <Button
-        android:id="@+id/above_price_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/above_price_minus"
-        app:layout_constraintTop_toBottomOf="@id/above_price_dollar"
-        android:text="+"
-        />
+            <ImageView
+                android:id="@+id/row_image"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_marginEnd="12dp"
+                android:src="@drawable/ic_arrow_down"
+                app:layout_constraintEnd_toStartOf="@id/edit_percent_name"
+                app:layout_constraintTop_toTopOf="@id/edit_percent_name" />
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="bold"
-        android:textColor="#ffffff"
-        android:letterSpacing="0.04"
-        android:gravity="center_horizontal"
-        android:background="#2196f3"
-        tools:text="SAVE"
-        />
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:text="24h"
+                android:textColor="#4a4a4a"
+                android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@id/edit_percent_name"
+                app:layout_constraintTop_toTopOf="@id/edit_percent_name" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="normal"
-        android:textColor="#9b9b9b"
-        android:letterSpacing="0.04"
-        android:gravity="center_horizontal"
-        tools:text="DISCARD"
-       app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
-        />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorLine"
+                app:layout_constraintTop_toBottomOf="@id/edit_percent_name" />
 
+            <Switch
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@id/tv_above_price"
+                app:layout_constraintTop_toBottomOf="@id/row_image" />
+
+            <TextView
+                android:id="@+id/tv_above_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center_horizontal"
+                android:letterSpacing="0.04"
+                android:paddingTop="21dp"
+                android:textColor="#7e8083"
+                android:textSize="14sp"
+                android:textStyle="normal"
+                app:layout_constraintStart_toStartOf="@id/tv_edit_price"
+                app:layout_constraintTop_toBottomOf="@id/row_image"
+                tools:text="Above Price : 	" />
+
+            <TextView
+                android:id="@+id/above_price_dollar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center_horizontal"
+                android:letterSpacing="0.04"
+                android:textColor="#7e8083"
+                android:textSize="20sp"
+                android:textStyle="normal"
+                app:layout_constraintStart_toEndOf="@id/tv_above_price"
+                app:layout_constraintTop_toBottomOf="@id/time"
+                tools:text="$14,000" />
+
+            <SeekBar
+                android:id="@+id/seek_bar_above"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
+                android:layout_marginTop="37dp"
+                app:layout_constraintStart_toStartOf="@id/tv_above_price"
+                app:layout_constraintTop_toBottomOf="@id/tv_above_price" />
+
+            <Button
+                android:id="@+id/above_price_minus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="-"
+                app:layout_constraintStart_toStartOf="@id/above_price_dollar"
+                app:layout_constraintTop_toBottomOf="@id/above_price_dollar" />
+
+            <Button
+                android:id="@+id/above_price_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+"
+                app:layout_constraintStart_toEndOf="@id/above_price_minus"
+                app:layout_constraintTop_toBottomOf="@id/above_price_dollar" />
+
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#2196f3"
+                android:fontFamily="sans-serif"
+                android:gravity="center_horizontal"
+                android:letterSpacing="0.04"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="SAVE" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center_horizontal"
+                android:letterSpacing="0.04"
+                android:textColor="#9b9b9b"
+                android:textSize="14sp"
+                android:textStyle="normal"
+                app:layout_constraintBottom_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="parent"
+                tools:text="DISCARD" />
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
