--- a/app/src/main/res/layout/item_coin_view.xml
+++ b/app/src/main/res/layout/item_coin_view.xml
@@ -77,4 +77,10 @@
         app:layout_constraintStart_toEndOf="@+id/percent"
         app:layout_constraintTop_toBottomOf="@+id/coin_name" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/colorLine"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
