--- a/app/src/main/res/layout/item_alert_view.xml
+++ b/app/src/main/res/layout/item_alert_view.xml
@@ -9,7 +9,7 @@
         android:id="@+id/coin_image"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_margin="20dp"
+        android:layout_margin="@dimen/app_small_margin"
         android:src="@drawable/ic_bitcoin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,17 +17,19 @@
 
     <TextView
         android:id="@+id/coin_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="Bitcoin(BTC)"
+        android:layout_margin="@dimen/app_small_margin"
+        android:layout_marginEnd="@dimen/app_small_margin"
         android:textColor="@color/lightBlack"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_margin="20dp"
-        app:layout_constraintStart_toEndOf="@+id/coin_image"
+        android:gravity="start"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/coin_price"
+        app:layout_constraintStart_toEndOf="@+id/coin_image"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        tools:text="Bitcoin(BTC)" />
 
     <TextView
         android:id="@+id/coin_price"
@@ -37,7 +39,7 @@
         android:textSize="20sp"
         tools:text="0.01201BTC"
         android:textColor="@color/lightBlack"
-        android:layout_margin="20dp"
+        android:layout_margin="@dimen/app_small_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +51,7 @@
         android:id="@+id/arrow_up"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/app_small_margin"
         android:src="@drawable/ic_arrow_up"
         app:layout_constraintTop_toBottomOf="@+id/coin_name"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,15 +60,17 @@
 
     <TextView
         android:id="@+id/max_price"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:text="0.01254BTC"
         android:textSize="15sp"
         android:textColor="#9ccf49"
+        android:gravity="start"
         android:textStyle="bold"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/coin_name"
-        app:layout_constraintStart_toEndOf="@id/arrow_up"
+        android:layout_marginStart="@dimen/app_small_margin"
+        app:layout_constraintTop_toTopOf="@id/arrow_up"
+        app:layout_constraintStart_toEndOf="@+id/arrow_up"
+        app:layout_constraintEnd_toStartOf="@+id/arrow_down"
         />
 
 
@@ -74,11 +78,10 @@
         android:id="@+id/arrow_down"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="10dp"
         android:src="@drawable/ic_arrow_down"
-        app:layout_constraintTop_toBottomOf="@+id/coin_price"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/coin_price"
+        android:layout_marginEnd="@dimen/app_small_margin"
+        app:layout_constraintTop_toTopOf="@id/arrow_up"
+        app:layout_constraintEnd_toStartOf="@id/min_price"
         />
 
     <TextView
@@ -89,8 +92,9 @@
         android:textSize="15sp"
         android:textColor="#d0021b"
         android:textStyle="bold"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/coin_price"
-        app:layout_constraintStart_toEndOf="@id/arrow_down"
+        android:layout_marginEnd="@dimen/app_small_margin"
+        app:layout_constraintTop_toTopOf="@id/arrow_up"
+        app:layout_constraintEnd_toEndOf="parent"
         />
+
 </android.support.constraint.ConstraintLayout>
