update coin details

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimaryDark">#1976d2</color>
     <color name="colorAccent">#ffa726</color>
     <color name="colorLine">#979797</color>
+    <color name="colorGraph">#33d0021b</color>
 </resources>
