update coin details - NOT DONE

--- a/app/src/main/res/drawable/ic_dash.xml
+++ b/app/src/main/res/drawable/ic_dash.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="65.0"
-    android:viewportWidth="64.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#3A74BE" android:fillType="nonZero" android:pathData="M31.7,0.8C14.2,0.8 0,15 0,32.5s14.2,31.7 31.7,31.7S63.4,50 63.4,32.5 49.2,0.8 31.7,0.8zM12.7,35.1v-0.2c0.3,-0.8 0.6,-1.6 0.9,-2.5 0.3,-0.8 0.5,-1.6 0.8,-2.4 0.1,-0.2 0.2,-0.3 0.4,-0.3h13.5c0,0.1 -0.1,0.3 -0.1,0.4l-1.5,4.5c-0.1,0.3 -0.2,0.4 -0.6,0.4h-13c-0.1,0.1 -0.3,0.1 -0.4,0.1zM50.7,25.9c-1.3,4 -2.6,8 -3.9,12.1 -0.8,2.5 -4.2,5.8 -7.9,5.7 -8.3,-0.1 -16.6,0 -24.8,0h-0.5c0.1,-0.3 0.2,-0.6 0.3,-0.8 0.5,-1.4 1,-2.9 1.4,-4.3 0.1,-0.4 0.3,-0.4 0.6,-0.4h22.4c0.3,0 0.5,-0.1 0.6,-0.4 1.1,-3.5 2.3,-7 3.4,-10.5 0,-0.1 0.1,-0.2 0.1,-0.4L19.1,26.9c0,-0.2 0.1,-0.3 0.1,-0.4 0.5,-1.6 1.1,-3.2 1.6,-4.8 0.1,-0.3 0.2,-0.4 0.5,-0.4h25.2c0.5,0 1.1,0.1 1.6,0.2 1.4,0.5 2.2,1.5 2.5,2.9 0,0.1 0.1,0.2 0.1,0.3v1.2z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="65.0"
+    android:viewportWidth="64.0">
+    <path
+        android:fillColor="#3A74BE"
+        android:pathData="M31.7,0.8C14.2,0.8 0,15 0,32.5s14.2,31.7 31.7,31.7S63.4,50 63.4,32.5 49.2,0.8 31.7,0.8zM12.7,35.1v-0.2c0.3,-0.8 0.6,-1.6 0.9,-2.5 0.3,-0.8 0.5,-1.6 0.8,-2.4 0.1,-0.2 0.2,-0.3 0.4,-0.3h13.5c0,0.1 -0.1,0.3 -0.1,0.4l-1.5,4.5c-0.1,0.3 -0.2,0.4 -0.6,0.4h-13c-0.1,0.1 -0.3,0.1 -0.4,0.1zM50.7,25.9c-1.3,4 -2.6,8 -3.9,12.1 -0.8,2.5 -4.2,5.8 -7.9,5.7 -8.3,-0.1 -16.6,0 -24.8,0h-0.5c0.1,-0.3 0.2,-0.6 0.3,-0.8 0.5,-1.4 1,-2.9 1.4,-4.3 0.1,-0.4 0.3,-0.4 0.6,-0.4h22.4c0.3,0 0.5,-0.1 0.6,-0.4 1.1,-3.5 2.3,-7 3.4,-10.5 0,-0.1 0.1,-0.2 0.1,-0.4L19.1,26.9c0,-0.2 0.1,-0.3 0.1,-0.4 0.5,-1.6 1.1,-3.2 1.6,-4.8 0.1,-0.3 0.2,-0.4 0.5,-0.4h25.2c0.5,0 1.1,0.1 1.6,0.2 1.4,0.5 2.2,1.5 2.5,2.9 0,0.1 0.1,0.2 0.1,0.3v1.2z" />
 </vector>
